--- a/app/system/modules/theme/less/uikit/variables.less
+++ b/app/system/modules/theme/less/uikit/variables.less
@@ -26,10 +26,10 @@
 // Backgrounds & Borders
 //
 
-@global-background:                             #fafafa;
+@global-background:                             #f9f9fb;
 @global-border:                                 #e5e5e5;
 
-@global-border-radius:                          3px;
+@global-border-radius:                          2px;
 
 @global-default-background:                     #eee;
 @global-default-hover-background:               #e5e5e5;
@@ -72,3 +72,9 @@
 //
 
 @global-z-index:                                1000;
+
+
+// Internal
+// ==========================================================================
+
+@global-image-path:                             'images';
