compiled admin css

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -20,19 +20,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-/*
- * Reset for navbar
- */
-
-.uk-navbar-nav > li > a {
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-osx-font-smoothing: auto;
-}
-
-/*
- * Reset for badge
- */
-
+/* Reset */
+.uk-navbar-nav > li > a,
 .uk-badge {
     -webkit-font-smoothing: subpixel-antialiased;
     -moz-osx-font-smoothing: auto;
