fixed search icon

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -1,6 +1,8 @@
 @import "uikit/uikit.less";
 @import "../../../assets/less/pagekit.less";
 
+@global-image-path: '../../images';
+
 /* ========================================================================
    Theme
  ========================================================================== */
