first draft for pk-icon less

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -215,6 +215,24 @@
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
 
+/* `pk-icon`
+ ========================================================================== */
+
+[class*='pk-icon-'] {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background: 50% 50% no-repeat;
+    vertical-align: middle;
+}
+
+.pk-icon-test { background-image: url("../../assets/images/action-delete.svg"); }
+
+
+.pk-icon-hover { opacity: 0.5; }
+.pk-icon-hover:hover { opacity: 1; }
+
+
 /* Sub-modifier `pk-overlay-border`
 ========================================================================== */
 
