cleanup pk-icon and added delete, block and check to different views

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -220,16 +220,18 @@
 
 [class*='pk-icon-'] {
     display: inline-block;
-    width: 35px;
-    height: 35px;
+    width: 20px;
+    height: 20px;
     background: 50% 50% no-repeat;
     vertical-align: middle;
 }
 
-.pk-icon-test { background-image: url("../../assets/images/action-delete.svg"); }
+.pk-icon-delete { background-image: url("../../assets/images/icon-delete.svg"); }
+.pk-icon-block { background-image: url("../../assets/images/icon-block.svg"); }
+.pk-icon-check { background-image: url("../../assets/images/icon-check.svg"); }
 
 
-.pk-icon-hover { opacity: 0.5; }
+.pk-icon-hover { opacity: 0.3; }
 .pk-icon-hover:hover { opacity: 1; }
 
 
@@ -594,4 +596,3 @@
     top: 0;
     right: -20px;
 }
-
