updated tab and pagination in admin uikit theme

--- a/app/system/modules/theme/less/uikit/pagination.less
+++ b/app/system/modules/theme/less/uikit/pagination.less
@@ -7,20 +7,21 @@
 // Variables
 // ========================================================================
 
+@pagination-font-size:                          16px;
 @pagination-padding-vertical:                   5px;
 @pagination-padding-horizontal:                 7px;
 @pagination-line-height:                        @global-line-height;
-@pagination-background:                         @global-default-background;
-@pagination-color:                              @global-color;
-@pagination-hover-background:                   @global-default-hover-background;
+@pagination-background:                         transparent;
+@pagination-color:                              @global-muted-color;
+@pagination-hover-background:                   transparent;
 @pagination-hover-color:                        @global-color;
-@pagination-onclick-background:                 @global-default-active-background;
+@pagination-onclick-background:                 transparent;
 @pagination-onclick-color:                      @global-color;
 
-@pagination-active-background:                  @global-primary-background;
-@pagination-active-color:                       @global-contrast-color;
+@pagination-active-background:                  transparent;
+@pagination-active-color:                       @global-color;
 
-@pagination-disabled-background:                @global-default-hover-background;
+@pagination-disabled-background:                transparent;
 @pagination-disabled-color:                     @global-muted-color;
 
 
@@ -31,17 +32,17 @@
 // Items
 //
 
-.hook-pagination-item() { border-radius: @global-border-radius; }
+.hook-pagination-item() {}
 
 // Link
-.hook-pagination-link() {}
+.hook-pagination-link() { border-bottom: 2px solid transparent; }
 
 .hook-pagination-link-hover() {}
 
 .hook-pagination-link-active() {}
 
 // Active
-.hook-pagination-active() {}
+.hook-pagination-active() { border-bottom: 2px solid @global-primary-background; }
 
 // Disabled
 .hook-pagination-disabled() {}
