--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -85,8 +85,8 @@ body {
     background: 50% 50% no-repeat;
     opacity: 0.5;
     vertical-align: middle;
-    -webkit-transition: opacity .1s linear;
-    transition: opacity .1s linear;
+    -webkit-transition: opacity 0.1s linear;
+    transition: opacity 0.1s linear;
 }
 
 [class*='tm-icon-']:hover { opacity: 1; }
