updated sortable dragged style

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -345,6 +345,19 @@
 }
 
 
+/* `pk-sortable-dragged`
+========================================================================== */
+
+.pk-sortable-dragged > * {
+    display: block;
+    padding: @nav-padding-vertical @nav-padding-horizontal;
+    background: #fff;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1);
+    color: @global-color;
+}
+
+
+
 /* `pk-finder`
  ========================================================================== */
 
