--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -236,12 +236,16 @@
 /* Sub-modifier `pk-table-order`
 ========================================================================== */
 
-.pk-table-order [class*='pk-icon-'] { opacity: 0.3; }
-
 .pk-table-order:hover { cursor: pointer; }
 
 .pk-table-order:hover,
 .pk-table-order.uk-active { color: #666; }
+
+/*
+ * Icon
+ */
+
+.pk-table-order [class*='pk-icon-'] { opacity: 0.3; }
 
 .pk-table-order:hover [class*='pk-icon-'],
 .pk-table-order.uk-active [class*='pk-icon-'] { opacity: 1; }
